박지영 : 베이스 01

--- a/Base01/Base01/Base01.vcxproj
+++ b/Base01/Base01/Base01.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="WinMain.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="SceneGame.cpp" />
     <ClCompile Include="SceneTitle.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
