--- a/Base01/Base01/Base01.vcxproj.filters
+++ b/Base01/Base01/Base01.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="SceneTitle.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="SceneGame.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
