--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -164,6 +164,14 @@
     </ClInclude>
     <ClInclude Include="BotUI.h" />
     <ClInclude Include="IntroLevel.h" />
+    <ClInclude Include="MenuExit.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="MenuLoad.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Monster.h">
       <SubType>
       </SubType>
@@ -181,11 +189,16 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="TitleBackGround.h" />
+    <ClInclude Include="TitleCloud.h" />
     <ClInclude Include="TitleLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
     <ClInclude Include="TitleLogo.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="MenuNewGame.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -200,6 +213,14 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="BotUI.cpp" />
+    <ClCompile Include="MenuExit.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MenuLoad.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Monster.cpp">
       <SubType>
       </SubType>
@@ -217,11 +238,16 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="TitleBackGround.cpp" />
+    <ClCompile Include="TitleCloud.cpp" />
     <ClCompile Include="TitleLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
     <ClCompile Include="TitleLogo.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MenuNewGame.cpp">
       <SubType>
       </SubType>
     </ClCompile>
