--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -162,21 +162,23 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="EndingCredit.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
     <ClInclude Include="EndingLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="BotUI.h" />
-    <ClInclude Include="IntroLevel.h" />
+    <ClInclude Include="IntroLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="LeftArrow.h">
       <SubType>
       </SubType>
     </ClInclude>
     <ClInclude Include="MainUI.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="MapleTree.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -189,6 +191,14 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Monster.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="MyFarmLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="MyHouse.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -224,7 +234,7 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="PlayLevel.h">
+    <ClInclude Include="MyHouseLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -250,6 +260,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TownLevel.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CustomData.cpp">
@@ -260,20 +274,23 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="EndingCredit.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
     <ClCompile Include="EndingLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="BotUI.cpp" />
+    <ClCompile Include="IntroLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="LeftArrow.cpp">
       <SubType>
       </SubType>
     </ClCompile>
     <ClCompile Include="MainUI.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MapleTree.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -286,6 +303,14 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Monster.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MyFarmLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="MyHouse.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -321,7 +346,7 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="PlayLevel.cpp">
+    <ClCompile Include="MyHouseLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -344,6 +369,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MenuNewGame.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TownLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
