--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -162,11 +162,11 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="EndingLevel.h">
+    <ClInclude Include="IntroLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="IntroLevel.h">
+    <ClInclude Include="Item.h">
       <SubType>
       </SubType>
     </ClInclude>
@@ -274,11 +274,11 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="EndingLevel.cpp">
+    <ClCompile Include="IntroLevel.cpp">
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="IntroLevel.cpp">
+    <ClCompile Include="Item.cpp">
       <SubType>
       </SubType>
     </ClCompile>
