리소스 편집, 애니메이션 기능 추가

--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -158,6 +158,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="PlayerEnum.h" />
     <ClInclude Include="CustomLevel.h">
       <SubType>
       </SubType>
