--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -239,6 +239,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="PlayerState.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="RightArrow.h">
       <SubType>
       </SubType>
@@ -348,6 +352,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="MyHouseLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="PlayerState.cpp">
       <SubType>
       </SubType>
     </ClCompile>
