--- a/API/GameEngine/GameEngine.vcxproj
+++ b/API/GameEngine/GameEngine.vcxproj
@@ -157,6 +157,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="GameEngineCollision.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="GameEngineEnum.h" />
     <ClInclude Include="GameEngine.h">
       <SubType>
@@ -197,6 +201,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="GameEngineActorSubObject.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="GameEngineCollision.cpp">
       <SubType>
       </SubType>
     </ClCompile>
