플레이어 합치기 전 백업

--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -247,6 +247,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="RendererEnum.h" />
     <ClInclude Include="RightArrow.h">
       <SubType>
       </SubType>
