--- a/API/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/API/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -50,15 +50,6 @@
     <ClCompile Include="IntroLevel.cpp">
       <Filter>Level</Filter>
     </ClCompile>
-    <ClCompile Include="MyHouseLevel.cpp">
-      <Filter>Level\Map</Filter>
-    </ClCompile>
-    <ClCompile Include="MyFarmLevel.cpp">
-      <Filter>Level\Map</Filter>
-    </ClCompile>
-    <ClCompile Include="TownLevel.cpp">
-      <Filter>Level\Map</Filter>
-    </ClCompile>
     <ClCompile Include="MyHouse.cpp">
       <Filter>Actor\Play\Buildings</Filter>
     </ClCompile>
@@ -82,6 +73,15 @@
     </ClCompile>
     <ClCompile Include="Items.cpp">
       <Filter>Actor\Play\Global\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="MyFarmLevel.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="MyHouseLevel.cpp">
+      <Filter>Level</Filter>
+    </ClCompile>
+    <ClCompile Include="TownLevel.cpp">
+      <Filter>Level</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -134,15 +134,6 @@
     <ClInclude Include="IntroLevel.h">
       <Filter>Level</Filter>
     </ClInclude>
-    <ClInclude Include="MyHouseLevel.h">
-      <Filter>Level\Map</Filter>
-    </ClInclude>
-    <ClInclude Include="MyFarmLevel.h">
-      <Filter>Level\Map</Filter>
-    </ClInclude>
-    <ClInclude Include="TownLevel.h">
-      <Filter>Level\Map</Filter>
-    </ClInclude>
     <ClInclude Include="MyHouse.h">
       <Filter>Actor\Play\Buildings</Filter>
     </ClInclude>
@@ -179,13 +170,19 @@
     <ClInclude Include="Items.h">
       <Filter>Actor\Play\Global\Item</Filter>
     </ClInclude>
+    <ClInclude Include="MyFarmLevel.h">
+      <Filter>Level</Filter>
+    </ClInclude>
+    <ClInclude Include="MyHouseLevel.h">
+      <Filter>Level</Filter>
+    </ClInclude>
+    <ClInclude Include="TownLevel.h">
+      <Filter>Level</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Level">
       <UniqueIdentifier>{3fdc01d6-f74f-4c06-8337-fcfead66623d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Level\Map">
-      <UniqueIdentifier>{6fd5e0fd-213c-47f9-b9b6-11f258a4030f}</UniqueIdentifier>
     </Filter>
     <Filter Include="Actor">
       <UniqueIdentifier>{81500ed8-0775-4f2e-8f3f-5cb70a8cfb1a}</UniqueIdentifier>
