--- a/API/GameEngineContents/GameEngineContents.vcxproj
+++ b/API/GameEngineContents/GameEngineContents.vcxproj
@@ -243,6 +243,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="SmallStone.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="StardewValley.h">
       <SubType>
       </SubType>
@@ -367,6 +371,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="RightArrow.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="SmallStone.cpp">
       <SubType>
       </SubType>
     </ClCompile>
